try except on json after post and changed cookies

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a03a2c46",
    "metadata": {
     "collapsed": true
@@ -19255,7 +19255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "73e9425d",
    "metadata": {},
    "outputs": [],
@@ -19265,21 +19265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "9cc69a2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import threading\n",
-    "from threading import Thread, local\n",
-    "localSession = local()\n",
-    "localSession = requests.Session()"
+    "from threading import Thread"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "c9a12621",
    "metadata": {},
    "outputs": [],
@@ -19292,7 +19290,7 @@
     "    url = \"https://app.apollo.io/api/v1/omnisearch/search\"\n",
     "    headers = {\n",
     "        \"Content-Type\": \"application/json\",\n",
-    "        \"Cookie\": \"amplitude_id_122a93c7d9753d2fe678deffe8fac4cfapollo.io=eyJkZXZpY2VJZCI6ImVkYjczZjI5LTM4NzUtNDkzYi04MGNiLThkNTg2YmYwNzhjNVIiLCJ1c2VySWQiOiI2MjI0YjcyOGEyMGE2YjAwYTZlMjZkNzMiLCJvcHRPdXQiOmZhbHNlLCJzZXNzaW9uSWQiOjE2NTAxMTI4MTMwNTUsImxhc3RFdmVudFRpbWUiOjE2NTAxMTMwMzc2MzQsImV2ZW50SWQiOjQwNywiaWRlbnRpZnlJZCI6MTkxLCJzZXF1ZW5jZU51bWJlciI6NTk4fQ==; _ga_76XXTC73SP=GS1.1.1649163004.6.0.1649163004.0; _ga=GA1.2.1196579620.1633527861; _cioanonid=19314a4f-0eb2-6340-47b8-f58cf3c867ce; _ym_uid=1633528148227666813; _ym_d=1633528148; zp__utm_source=Apollo; zp__initial_utm_source=accounts.google.com; _cioid=6224b728a20a6b00a6e26d73; __stripe_mid=ebc5d1cd-d6ab-4cf2-8527-ad6b3acad670344d08; _gcl_au=1.1.590646370.1646481592; _fbp=fb.1.1646481593545.109162426; _clck=ti0luf|1|f0d|0; drift_aid=9aac50c0-c02a-432a-90b8-9048aab56f6f; driftt_aid=9aac50c0-c02a-432a-90b8-9048aab56f6f; zp__utm_medium=Discovery; zp__initial_utm_medium=Discovery; zp__utm_campaign=Contact_Hero; zp__initial_utm_campaign=Discovery%20Person%20Page%20-%20General; zp__utm_content=5fc78fadc9252a0001bbfd97; zp__initial_utm_content=5fc78fadc9252a0001bbfd97; _uetvid=82ac246026ab11ec8bd20d39ca3ed3c6; GCLB=CNGQ7aq-mNLGnAE; drift_campaign_refresh=893e45ef-043f-405b-87a0-264e9d585939; ZP_Pricing_Split_Test_Variant=21Q3_EC_U49; X-CSRF-TOKEN=Qc0RrcukgFPzDBimU7CWGMtMfumsa%2Fmgu1Li5f0v6Mk7IArdZVXLiATyxsM4ico0GwfAzKDU0es4plUySgu36g%3D%3D; _leadgenie_session=R1UvT1JnNEI5aE51dVhUZklXVG0vcC83dlJ0dmptSEhHNk1jUFdSaXhiV0swdVhOK0ZaMWdFSnkxcVZxdzlRcHhJZ0FQQ1doblZzT095Sm5BOTNmNkU0TmE0Vno1L2FaOEFFN05GL0JKek42a1RkWmxCWG5xY1BXTDVLSDZrMjRIN0hrc1R1UnZFS01SWU10b0JJalJnPT0tLUkvWFdnaDBFYjgzcWdVd0FSS2VhZ0E9PQ%3D%3D--a45a5434b76b1536ddb5ce422e3e7ac572c1e3f7; remember_token_leadgenie_v2=IjYyMjRiNzI4YTIwYTZiMDBhNmUyNmQ3M19mMTc1MGNkZWI5MzRiYWU1ZDg2MmJhZDgyYzdlMTNkNSI%3D--e53d5b5648ebfe3ade14301a42adfcca19ff8aad; app_token=d28cde3d0289168303152acde595e88b; __stripe_sid=d69a127f-6f06-4033-8047-7762749cbeb7c594da\",\n",
+    "        \"Cookie\": \"zp__initial_utm_source=www.google.com; drift_campaign_refresh=969e40c7-b08f-408b-ac96-e4f179df6c0a; ZP_Pricing_Split_Test_Variant=21Q3_EC_V49; drift_aid=67cbe002-652d-41f5-8299-25cdf42b3bd3; driftt_aid=67cbe002-652d-41f5-8299-25cdf42b3bd3; remember_token_leadgenie_v2=IjYyNzI0N2Y0MDMyOTA0MDBkOTI3ZjA0NV9sZWFkZ2VuaWVjb29raWVoYXNoIg==--b84a729982761895bd61aaf87c5a9de49f9802dd; app_token=6438fb65adc314e0404230bf41536a2a; zp__utm_source=accounts.google.com; drift_eid=627247f403290400d927f045; __stripe_mid=06eaafd7-76d2-4770-908b-d8f07c1cbebe36217d; __stripe_sid=a185a2f3-4082-4610-9429-fb60d9e97b0b325ece; GCLB=CKOK1tH9g7jEeQ; X-CSRF-TOKEN=aw+99ukIg+kclWeIoQLrTe7QKjGFxpwF2+4rk0HieFqn5o6uTRv/j/RpN0uwOaOFg64YjXPZ1snq2Tj2nUsvUw==; _leadgenie_session=Y2tmUEpSYmtMRnFLZzVrb3JweGxIa3hzUUwrMElNYmlsTSt6K1Zod0gyWU1MakY1dXNWakViM3N1UFNzb3dzSUVKaVZkeVNCKzRaNnYxdXUvemJXV0VDZmJuM2N5V2tlTVVBcWlqMGI1NS9OMnRkNSswOVRPbzV2WVdJNXppTTEyNjlaUXErYkg4Z01ZeUdqNWdNUld3PT0tLVJIUnJnczFhKzZKSmpOVWlqelhMR0E9PQ==--f5340490d3391350fae335ce0f2b90fb2b77e48b\",\n",
     "        \"Origin\": \"https://app.apollo.io\",\n",
     "        \"Referer\": \"https://app.apollo.io/\"\n",
     "    }\n",
@@ -19302,18 +19300,20 @@
     "        \"cacheKey\":1650463168797\n",
     "    }\n",
     "    lock.acquire()\n",
-    "    response = localSession.post(url, headers=headers, data=json.dumps(data))\n",
+    "    response = requests.post(url, headers=headers, data=json.dumps(data))\n",
     "    lock.release()\n",
-    "    if not len(response.json()['organizations']):\n",
-    "        nf = \"NOT FOUND\"\n",
-    "        return nf\n",
-    "    else:\n",
-    "        return response.json()['organizations'][0]['id']"
+    "    try:\n",
+    "        if not len(response.json()['organizations']):\n",
+    "            return \"NOT FOUND\"\n",
+    "        else:\n",
+    "            return response.json()['organizations'][0]['id']\n",
+    "    except:\n",
+    "        return \"ACCOUNT BLOCKED\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "f6c9e903",
    "metadata": {},
    "outputs": [],
@@ -19326,18 +19326,19 @@
     "    \"\"\"\n",
     "    Returns Company Info from using the ID retrieved\n",
     "    \"\"\"\n",
-    "    if id == \"NOT FOUND\":\n",
+    "    if id in [\"NOT FOUND\", \"ACCOUNT BLOCKED\"]:\n",
     "        return \"NOT FOUND\"\n",
     "    else:\n",
     "        url = 'https://app.apollo.io/api/v1/organizations/'+id\n",
     "        headers = {\n",
     "            \"Content-Type\": \"application/json\",\n",
-    "            \"Cookie\": \"amplitude_id_122a93c7d9753d2fe678deffe8fac4cfapollo.io=eyJkZXZpY2VJZCI6ImVkYjczZjI5LTM4NzUtNDkzYi04MGNiLThkNTg2YmYwNzhjNVIiLCJ1c2VySWQiOiI2MjI0YjcyOGEyMGE2YjAwYTZlMjZkNzMiLCJvcHRPdXQiOmZhbHNlLCJzZXNzaW9uSWQiOjE2NTAxMTI4MTMwNTUsImxhc3RFdmVudFRpbWUiOjE2NTAxMTMwMzc2MzQsImV2ZW50SWQiOjQwNywiaWRlbnRpZnlJZCI6MTkxLCJzZXF1ZW5jZU51bWJlciI6NTk4fQ==; _ga_76XXTC73SP=GS1.1.1649163004.6.0.1649163004.0; _ga=GA1.2.1196579620.1633527861; _cioanonid=19314a4f-0eb2-6340-47b8-f58cf3c867ce; _ym_uid=1633528148227666813; _ym_d=1633528148; zp__utm_source=Apollo; zp__initial_utm_source=accounts.google.com; _cioid=6224b728a20a6b00a6e26d73; __stripe_mid=ebc5d1cd-d6ab-4cf2-8527-ad6b3acad670344d08; _gcl_au=1.1.590646370.1646481592; _fbp=fb.1.1646481593545.109162426; _clck=ti0luf|1|f0d|0; drift_aid=9aac50c0-c02a-432a-90b8-9048aab56f6f; driftt_aid=9aac50c0-c02a-432a-90b8-9048aab56f6f; zp__utm_medium=Discovery; zp__initial_utm_medium=Discovery; zp__utm_campaign=Contact_Hero; zp__initial_utm_campaign=Discovery%20Person%20Page%20-%20General; zp__utm_content=5fc78fadc9252a0001bbfd97; zp__initial_utm_content=5fc78fadc9252a0001bbfd97; _uetvid=82ac246026ab11ec8bd20d39ca3ed3c6; GCLB=CNGQ7aq-mNLGnAE; drift_campaign_refresh=893e45ef-043f-405b-87a0-264e9d585939; ZP_Pricing_Split_Test_Variant=21Q3_EC_U49; X-CSRF-TOKEN=Qc0RrcukgFPzDBimU7CWGMtMfumsa%2Fmgu1Li5f0v6Mk7IArdZVXLiATyxsM4ico0GwfAzKDU0es4plUySgu36g%3D%3D; _leadgenie_session=R1UvT1JnNEI5aE51dVhUZklXVG0vcC83dlJ0dmptSEhHNk1jUFdSaXhiV0swdVhOK0ZaMWdFSnkxcVZxdzlRcHhJZ0FQQ1doblZzT095Sm5BOTNmNkU0TmE0Vno1L2FaOEFFN05GL0JKek42a1RkWmxCWG5xY1BXTDVLSDZrMjRIN0hrc1R1UnZFS01SWU10b0JJalJnPT0tLUkvWFdnaDBFYjgzcWdVd0FSS2VhZ0E9PQ%3D%3D--a45a5434b76b1536ddb5ce422e3e7ac572c1e3f7; remember_token_leadgenie_v2=IjYyMjRiNzI4YTIwYTZiMDBhNmUyNmQ3M19mMTc1MGNkZWI5MzRiYWU1ZDg2MmJhZDgyYzdlMTNkNSI%3D--e53d5b5648ebfe3ade14301a42adfcca19ff8aad; app_token=d28cde3d0289168303152acde595e88b; __stripe_sid=d69a127f-6f06-4033-8047-7762749cbeb7c594da\",\n",
+    "\n",
+    "            \"Cookie\": \"zp__initial_utm_source=www.google.com; drift_campaign_refresh=969e40c7-b08f-408b-ac96-e4f179df6c0a; ZP_Pricing_Split_Test_Variant=21Q3_EC_V49; drift_aid=67cbe002-652d-41f5-8299-25cdf42b3bd3; driftt_aid=67cbe002-652d-41f5-8299-25cdf42b3bd3; remember_token_leadgenie_v2=IjYyNzI0N2Y0MDMyOTA0MDBkOTI3ZjA0NV9sZWFkZ2VuaWVjb29raWVoYXNoIg==--b84a729982761895bd61aaf87c5a9de49f9802dd; app_token=6438fb65adc314e0404230bf41536a2a; zp__utm_source=accounts.google.com; drift_eid=627247f403290400d927f045; __stripe_mid=06eaafd7-76d2-4770-908b-d8f07c1cbebe36217d; __stripe_sid=a185a2f3-4082-4610-9429-fb60d9e97b0b325ece; GCLB=CKOK1tH9g7jEeQ; X-CSRF-TOKEN=aw+99ukIg+kclWeIoQLrTe7QKjGFxpwF2+4rk0HieFqn5o6uTRv/j/RpN0uwOaOFg64YjXPZ1snq2Tj2nUsvUw==; _leadgenie_session=Y2tmUEpSYmtMRnFLZzVrb3JweGxIa3hzUUwrMElNYmlsTSt6K1Zod0gyWU1MakY1dXNWakViM3N1UFNzb3dzSUVKaVZkeVNCKzRaNnYxdXUvemJXV0VDZmJuM2N5V2tlTVVBcWlqMGI1NS9OMnRkNSswOVRPbzV2WVdJNXppTTEyNjlaUXErYkg4Z01ZeUdqNWdNUld3PT0tLVJIUnJnczFhKzZKSmpOVWlqelhMR0E9PQ==--f5340490d3391350fae335ce0f2b90fb2b77e48b\",\n",
     "            \"Origin\": \"https://app.apollo.io\",\n",
     "            \"Referer\": \"https://app.apollo.io/\"\n",
     "        }\n",
     "        lock.acquire()\n",
-    "        response = localSession.get(url, headers=headers)\n",
+    "        response = requests.get(url, headers=headers)\n",
     "        lock.release()\n",
     "        #print(response.status_code)\n",
     "        #print(response.text)\n",
@@ -19346,7 +19347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "95add821",
    "metadata": {},
    "outputs": [],
@@ -19359,13 +19360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "8ccc5ef3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df1 = companiesC.loc[0:30000]\n",
-    "df2 = companiesC.loc[30001:61267]\n",
+    "df2 = companiesC.loc[30001:30002]\n",
+    "#df2 = companiesC.loc[30001:61267]\n",
     "dict = {\n",
     "    \"index\" : [],\n",
     "    \"employee_count\" : [],\n",
@@ -19378,7 +19380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "3d11bb06",
    "metadata": {},
    "outputs": [],
@@ -19394,7 +19396,7 @@
     "    try:\n",
     "        res = json.loads(res)\n",
     "    except:\n",
-    "        return None\n",
+    "        return None #usually returns None if getCompanies() returns \"NOT FOUND\"\n",
     "    try:\n",
     "        employee_count = res['organization']['estimated_num_employees']\n",
     "    except:\n",
@@ -19418,7 +19420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "b514b299",
    "metadata": {},
    "outputs": [
@@ -19426,9 +19428,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "39740\n",
+      "39738\n",
       "30001\n",
-      "31272\n",
-      "6\n"
+      "30002\n",
+      "39738\n"
      ]
     }
    ],
@@ -19446,7 +19450,7 @@
     "print(active_count())\n",
     "print(otherThreads)\n",
     "while active_count() != otherThreads:\n",
-    "    time.sleep(2)\n",
+    "    time.sleep(5*60) \n",
     "    dfTups = pd.DataFrame(compInfoTups, columns=['index', 'employee_count', 'country', 'number_of_technologies', 'annual_rev'])\n",
     "    dfTups.to_csv('Scrapped Companies/scrapped_companies_2.csv', index=False, header=True)\n",
     "\n",
@@ -19457,25 +19461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "22be0740",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(30002, 0, 'United States', 0, nan),\n",
-       " (30003, 5, 'United States', 1, 195000.0),\n",
-       " (30004, 14, 'United States', 7, 5000000.0),\n",
-       " (30005, 0, None, 1, nan),\n",
-       " (30006, 10, 'United States', 3, 25000000.0),\n",
-       " (30007, 11, 'United States', 9, 3328000.0),\n",
-       " (30008, 2, 'Ecuador', 6, nan),\n",
-       " (30009, 0, 'Germany', 4, nan),\n",
-       " (30010, 29, 'United States', 12, 11232000.0)]"
+       "[]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
