done with 10k rows

--- a/Ashraf-Startup-Companies.ipynb
+++ b/Ashraf-Startup-Companies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a03a2c46",
    "metadata": {
     "collapsed": true
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16544,7 +16544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that when we used inner join, the number of companies decreased from 10121 to 37580; <br>\n",
+    "Notice that when we used inner join, the number of companies decreased from 37580 to 10121; <br>\n",
     "that's because the rest of the companies were founded before 2014 (first date in `dfTaxesMelted` dataframe) <br>\n",
     "However, 10000+ are still a lot of companies, so we'll continue the analysis on `USA`"
    ]
@@ -16753,6 +16753,15 @@
     "                    .round(0)\n",
     "                    .style.format(\"{:,}\"))\n",
     "taxTotalFundsUSA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem: turns out that in our dataset, `USA` companies that are after 2016 are not present, <br>\n",
+    "and the tax rate for the countries before that were constant (40%). <br>\n",
+    "Therefore, let's look at other countries "
    ]
   },
   {
