--- a/Aisha-Startup-Companies.ipynb
+++ b/Aisha-Startup-Companies.ipynb
@@ -46,72 +46,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Getting important functions\n",
-    "def datasetsCols(dfList, datasetNames, pad=\"\"):\n",
-    "    \"\"\"\n",
-    "    Takes dataframes and returns a dataframe (df) with each column having a df's\n",
-    "    column names. The \"pad\" is to make sure all lists of columns have \n",
-    "    the same length padded out with \"pad\"\n",
-    "    Example\n",
-    "    pad = \"XX\", datasetNames = [\"cars\", \"planes\"]\n",
-    "    dfList = [carsDF, planesDF]\n",
-    "    returned data frame:\n",
-    "            cars            planes\n",
-    "    0       numOfWheels     numOfWings\n",
-    "    1       manufacturer    manufacturer\n",
-    "    2       make            XX\n",
-    "    \"\"\"\n",
-    "    cols = []\n",
-    "    maxArrayLen = 0\n",
-    "    for i, df in enumerate(dfList):\n",
-    "        cols.append(df.columns.tolist())\n",
-    "        maxArrayLen = max(maxArrayLen, len(cols[i]))\n",
-    "    \n",
-    "    dictCsvs = {}\n",
-    "    for i, df in enumerate(dfList):\n",
-    "        cols[i] += [pad] * (maxArrayLen - len(cols[i])) #padding the lists to make them have equal lengths \n",
-    "        dictCsvs.update({datasetNames[i] : cols[i]})\n",
-    "\n",
-    "    return pd.DataFrame(dictCsvs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Getting important functions (cont.)\n",
-    "def datasetsNulls(dfList, datasetNames, nullCol=\"nulls_\", pad=\"\"):\n",
-    "    \"\"\"\n",
-    "    Use this when you want to display a column of column names,\n",
-    "    then a column of the null values, and repeat that for each dataset.\n",
-    "    Returns a dataframe\n",
-    "    \"\"\"\n",
-    "    cols = []\n",
-    "    nulls = []\n",
-    "    maxArrayLen = 0\n",
-    "    for i, df in enumerate(dfList):\n",
-    "        cols.append(df.columns.tolist())\n",
-    "        nulls.append(df.isnull().sum().tolist())\n",
-    "        maxArrayLen = max(maxArrayLen, len(cols[i]))\n",
-    "    \n",
-    "    dictCsvs = {}\n",
-    "    for i, df in enumerate(dfList):\n",
-    "        cols[i] += [pad] * (maxArrayLen - len(cols[i])) #padding the lists to make them have equal lengths \n",
-    "        nulls[i] += [None] *  (maxArrayLen - len(nulls[i]))\n",
-    "        dictCsvs[datasetNames[i]] = cols[i]\n",
-    "        dictCsvs[nullCol + str(i+1)] = nulls[i]\n",
-    "    \n",
-    "    return pd.DataFrame(dictCsvs)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "697762c8",
    "metadata": {},
@@ -123,29 +57,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scraping"
+    "STATE THE QUESTION AGAIN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleaning"
+    "### Visualization"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Merging"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualizing"
-   ]
+   "source": []
   }
  ],
  "metadata": {
