added aisha's question + updated some visualizations in the cleaning part of phase 1

--- a/Ashraf-Startup-Companies.ipynb
+++ b/Ashraf-Startup-Companies.ipynb
@@ -126,7 +126,8 @@
    "metadata": {},
    "source": [
     "* Do country taxes play an important factor in deciding a start-up’s success?\n",
-    "    - This can be determined by gathering information about each country’s tax revenues <br> and correlating the results with the status of a start-up."
+    "    - This can be determined by gathering information about a country’s tax rates <br> and correlating the results with the status of a start-up.\n",
+    "    - An average of the total fundings raised could also be correlated with the country's tax rates "
    ]
   },
   {
