--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -35503,10 +35503,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c2e9ccd",
+   "metadata": {},
+   "source": [
+    "#### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc4a9664",
+   "metadata": {},
+   "source": [
+    "In conclusion, the number of employees can be considered directly proportional with the annual revenue although of course there are other factors that affect the revenue, but hiring intels and labor can increase productivity and its cost does’t impact the company in a negative manner."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dae27115",
    "metadata": {},
    "source": [
-    "## Question 2: Which categroy acheives highest revenue? (Farah)"
+    "## Question 1.2: Which categroy acheives highest revenue? (Farah)"
    ]
   },
   {
@@ -36662,7 +36678,7 @@
    "id": "a0bd872a",
    "metadata": {},
    "source": [
-    "### Question 3: Does the annual Revenue attract investors? (Farah)"
+    "### Question 2: Does the annual Revenue attract investors? (Farah)"
    ]
   },
   {
@@ -37148,14 +37164,6 @@
     "H0: The effect of the number of employees and the effect of the number of technologies used on the company's success are equal i.e., μ1 = μ2\n",
     "\n",
     "H1: The effect of the number of employees and the effect of the number of technologies used on the company's success are not equal i.e., μ1 ≠ μ2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "92cc96a0",
-   "metadata": {},
-   "source": [
-    "creating series for each column in the original dataframe"
    ]
   },
   {
