Added Aisha's Presentation and Integrated DS-Presentation.pptx

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -10993,7 +10993,11 @@
     }
    ],
    "source": [
-    "d = {'status': ['operating', 'acquired', 'closed'], 'mean': [operatingtotal['raised_amount_usd'].mean(), acquiredtotal['raised_amount_usd'].mean(), closedtotal['raised_amount_usd'].mean()]}\n",
+    "d = {'status': ['operating', 'acquired', 'closed'], \n",
+    "'mean': [\n",
+    "    operatingtotal['raised_amount_usd'].mean(),\n",
+    "     acquiredtotal['raised_amount_usd'].mean(), \n",
+    "     closedtotal['raised_amount_usd'].mean()]}\n",
     "statuses = pd.DataFrame(d)\n",
     "statuses"
    ]
@@ -11105,12 +11109,12 @@
    "source": [
     "comp_rounds = companies.set_index('company_name')\n",
     "comp_rounds['time_before_first_fund'] = comp_rounds['time_before_first_fund'].abs()\n",
-    "comp_rounds = comp_rounds.sort_values('time_before_first_fund', ascending=False)\n"
+    "comp_rounds = comp_rounds.sort_values('time_before_first_fund', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1790,
+   "execution_count": 1954,
    "id": "a777705f",
    "metadata": {},
    "outputs": [
@@ -11126,7 +11130,7 @@
        "Name: time_before_first_fund, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 1790,
+     "execution_count": 1954,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19290,7 +19294,8 @@
     "def searchByUrl(homepage_url):\n",
     "    \"\"\"\n",
     "    Searches for the company in Apollo's API using the homepage_url, and retreives its ID \n",
-    "    Note: homepage_url was used instead of the company's name as sometimes, Apollo doesn't retrieve the correct company using the name\n",
+    "    Note: homepage_url was used instead of the company's name as sometimes, \n",
+    "    Apollo doesn't retrieve the correct company using the name\n",
     "    \"\"\"\n",
     "    url = \"https://app.apollo.io/api/v1/omnisearch/search\"\n",
     "    data = {\n",
@@ -19417,7 +19422,8 @@
     "    two loops:\n",
     "    inner loop scraps ten companies parallely (using threads)\n",
     "    outer loop fetches the next 10 rows to be scraped (using j += i*10),\n",
-    "    you can adjust the range() in the outer loop to suit the companies that you want to get scraped info for in companiesC\n",
+    "    you can adjust the range() in the outer loop to suit the companies \n",
+    "    that you want to get scraped info for in companiesC\n",
     "    \"\"\"\n",
     "    for i in range(1): \n",
     "        threads = []\n",
@@ -30835,7 +30841,13 @@
    ],
    "source": [
     "#getting the number of companies that were founded after the end of 2015\n",
-    "len(companiesC[(companiesC.company_country_code == 'USA') & (companiesC.founded_at >= pd.Timestamp(2016, 1, 1))])"
+    "len(\n",
+    "    companiesC[\n",
+    "        (companiesC.company_country_code == 'USA') \n",
+    "        & \n",
+    "        (companiesC.founded_at >= pd.Timestamp(2016, 1, 1))\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
@@ -31923,7 +31935,7 @@
     "One can notice that even though 250+ companies were founded in 2014 and only 70+ were founded in 2015 <Br>\n",
     "The difference in the total funding is only around 100k USD, which is not much <br>\n",
     "Therefore, these few companies in 2015 got relatively a lot of fundings, and at the same time, the taxes went down by 1% <br>\n",
-    "Thus, there could be a *slight correlation* between decreasing the rate of taxes, and increasing the possibility <br> that stakeholders give more funding to the staartup company"
+    "Thus, there could be a *slight correlation* between decreasing the rate of taxes, and increasing the possibility <br> that stakeholders give more funding to the startup company"
    ]
   },
   {
