--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -7748,7 +7748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1759,
+   "execution_count": 1957,
    "id": "00183320",
    "metadata": {},
    "outputs": [
@@ -7758,7 +7758,7 @@
        "'Japan'"
       ]
      },
-     "execution_count": 1759,
+     "execution_count": 1957,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8345,7 +8345,7 @@
    ],
    "source": [
     "# To show that there really are duplicates in acquisitions dataset\n",
-    "acquis[acquis.duplicated(keep = False) == True]"
+    "acquis[acquis.duplicated(keep = False) == True] #False : Mark all duplicates as True"
    ]
   },
   {
@@ -9087,9 +9087,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "companies['funding_total_usd'] = pd.to_numeric(companies['funding_total_usd'],errors = 'coerce')\n",
-    "companies['funding_total_usd'].fillna(0, inplace = True)\n",
-    "companies['funding_total_usd'] = companies['funding_total_usd'].astype(float, errors = 'raise')"
+    "companies['funding_total_usd'] = pd.to_numeric(companies['funding_total_usd'],errors = 'coerce') #converted to int\n",
+    "companies['funding_total_usd'].fillna(0, inplace = True) #removed NaNs\n",
+    "companies['funding_total_usd'] = companies['funding_total_usd'].astype(float, errors = 'raise') #converted to float"
    ]
   },
   {
@@ -11740,7 +11740,7 @@
    ],
    "source": [
     "companies.sort_values(by=['company_name'], inplace=True)\n",
-    "invests.sort_values(by=['company_name'],inplace=True)\n",
+    "invests.sort_values(by=['company_name'],inplace=True) #for eye-candy purposes\n",
     "comp_invests = companies.join(invests.set_index('company_name'), on='company_name',lsuffix='_left', rsuffix='_right')\n",
     "comp_invests"
    ]
@@ -19436,11 +19436,14 @@
     "                th = Thread(target=getCompanyInfo, args=(j+30001, searchTerm))\n",
     "                threads.append(th)\n",
     "                th.start()\n",
-    "            for th in threads: # means that all of the threads have to finish to enter the next iteration in the outer for loop\n",
+    "            for th in threads: \n",
     "                th.join()\n",
     "        finally:\n",
-    "            dfTups = pd.DataFrame(compInfoTups, columns=['index', 'employee_count', 'country', 'number_of_technologies', 'annual_rev'])\n",
-    "            dfTups.to_csv('Scrapped Companies/scrapped_companies_test.csv', mode='a', index=False, header=False)"
+    "            dfTups = pd.DataFrame(compInfoTups, columns=[\n",
+    "                'index', 'employee_count', 'country', 'number_of_technologies', 'annual_rev'\n",
+    "                ])\n",
+    "            dfTups.to_csv('Scrapped Companies/scrapped_companies_test.csv', \n",
+    "                    mode='a', index=False, header=False)"
    ]
   },
   {
